--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 
 ## I'm a Husband, Father, Developer, and Teacher!!
 
-- 🔭 I just launched myself in the world Computer programming and Maching Learning and Artifical Intelligence.  : [Become A Python SuperHero!][course]!
+- 🔭 I just launched myself in the world of Computer programming and Machine Learning and Artifical Intelligence.  : [Become A Python SuperHero!]!
 - 🌱 I’m currently learning everything 🤣
 - 👯 I’m looking to work hard to reach my goal.
 - 🥅 2022 Goals: Asprining to be a Data Scientist/Data Analyst.
