--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 **I'm a Student , Developer, and Civil Engineer!!**
 
 - 🔭 I just launched myself in the world of Computer programming and Machine Learning and Artifical Intelligence.  : [Become A Python SuperHero!]!
-- 🌱 I’m currently learning everything 🤣
+- 🌱 I’m currently learning everything or learning is a never ending cycle LOL🤣
 - 👯 I’m looking to work hard to reach my goal.
 - 🥅 2022 Goals: Asprining to be a Data Scientist/Data Analyst.
 - ⚡ Fun fact: I love to draw and play video games.
